# env4ai

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yaml
aws/: Dockerfile  pyproject.toml
aws/ailearning/: environment_config.py
aws/ailearning/init/: agents.sh  deps.sh  python.sh  tools.sh
aws/base_stack/: app.py
aws/base_stack/workstation/: env4ai_network_stack.py  workstation_stack.py
aws/builder/: app.py  environment_config.py  pyproject.toml
aws/builder/builder_workstation/: builder_workstation_stack.py
aws/builder/init/: deps.sh
aws/builder/workstation/: workstation_stack.py
aws/codereview/: environment_config.py
aws/codereview/init/: deps.sh  sprites.sh
aws/common/init/: agents.sh  aws.sh  aws_ssm.sh  dev.sh  docker.sh  go.sh  gui.sh  libreoffice.sh  nodejs.sh  python.sh
aws/desktop/: environment_config.py
aws/desktop/init/: agents.sh  brave.sh  libreoffice.sh
aws/gastown/: Pipfile  README.md  app.py  cdk.json  environment_config.py  pyproject.toml  workstation
aws/iam/: deployer-policy.json
aws/launcher/: environment_config.py
aws/openclaw/: app.py  cdk.json  environment_config.py
aws/scripts/: check_instance.py  deploy_workstation.py  destroy_shared_network.py  interactive_workstation.py  save_workstation_ami.py  stop_workstation.py
aws/teslamate/: environment_config.py
aws/workstation_core/: __init__.py  ami_lifecycle.py  cdk_helpers.py  config.py  elastic_ip.py  environment_config.py  interactive_workstation.py  orchestration.py  pyproject.toml  runtime.py  runtime_resolution.py  workstation_status.py
(+85 files in other folders)
