[project]
name = "aws"
version = "0.1.0"
description = "AWS CDK app for the development workstation stack"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aws-cdk-lib==2.108.1",
    "boto3==1.28.73",
    "constructs>=10.0.0,<11.0.0",
    "workstation-core",
]

[tool.uv.sources]
workstation-core = { path = "workstation_core", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
